# simple_solar_system_simulation

./: 2  Cargo.toml  README.md  \  circle.json  direct_collision.json  dual.json  setup.json  ternery.json
src/: camera.rs  main.rs  physics.rs  star_config.rs
src/integration/: mod.rs  runge_kutta.rs  ruth_fourth_order.rs  simplectic_integrator_constructor.rs  velocity_verlet.rs
