[package]
name = "simple_solar_system_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"] } # remove "dynamic" features for final release
bevy-inspector-egui = "0.12.1"
bevy_egui = "0.16.0"
bevy_mod_picking = "0.8.2"
bevy_transform_gizmo = "0.3.1"
serde = "1.0.144"
serde_json = "1.0.85"
bevy_prototype_debug_lines = { version = "0.8", features = ["3d"] }
itertools = "0.10.3"
ndarray = "0.15.6"



# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
